the new changes

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,8 @@
   
 <section id="contact">
 
-  <h1 class="section-header">LINK-YOUR-API'S</h1>
+  <h1 class="section-header">MEETUPSNOWEASIER </h1>
+  
   
 
   <div class="contact-wrapper">
